# EventScore

./: .gitignore  Makefile  README.md  docker-compose.databases_for_dev.yml  docker-compose.yml  fastapi.json  prometheus.yml
frontend/: .env.template  index.html  package-lock.json
frontend/src/: App.vue  main.ts
frontend/src/api/: news.js  news.ts
frontend/src/components/: EventsList.vue  Navbar.vue  NewsForm.vue  NewsItem.vue  NewsList.vue
frontend/src/pages/: Home.vue
line-provider/: .env.template  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
line-provider/migrations/: env.py
line-provider/migrations/versions/: 0.0.0.0_create_tables.py
line-provider/scripts/: wait_for_db.sh
line-provider/src/: app.py  bootstrap.py  config.py
line-provider/src/adapters/: orm.py  repository.py
line-provider/src/adapters/repository/: __init__.py  base.py  redis_repository.py  schemas.py  sqlalchemy_repository.py
line-provider/src/api/api_v1/: __init__.py  dependencies.py  news.py
line-provider/src/core/: config.py  connectors.py  utils.py
line-provider/src/core/schemas/: news.py
line-provider/src/domain/: commands.py  events.py  exceptions.py  model.py
line-provider/src/entrypoints/: app.py  redis_eventconsumer.py
line-provider/src/service_layer/: handlers.py  messagebus.py  unit_of_work.py
line-provider/src/service_layer/producers/: __init__.py  redis_producer.py
line-provider/tests/: conftest.py
line-provider/tests/e2e/: test_api.py  test_external_events.py
line-provider/tests/integration/: redis_client.py  test_repository.py  test_uow.py
line-provider/tests/unit/: test_domain.py
score-maker/: .env.template  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
score-maker/migrations/versions/: 0.0.0.0_create_tables.py
score-maker/scripts/: wait_for_db.sh
score-maker/src/: bootstrap.py
score-maker/src/adapters/: orm.py
score-maker/src/adapters/repository/: __init__.py  base.py  sqlalchemy_repository.py
score-maker/src/api/api_v1/: __init__.py  dependencies.py  news_scores.py
score-maker/src/core/: config.py  logging_config.py
score-maker/src/core/schemas/: news_score.py
score-maker/src/domain/: commands.py  events.py  exceptions.py
score-maker/src/entrypoints/: app.py  redis_eventconsumer.py
score-maker/src/service_layer/: handlers.py  unit_of_work.py
score-maker/src/service_layer/producers/: redis_producer.py
score-maker/tests/: conftest.py
score-maker/tests/integration/: test_repository.py
(+4 files in other folders)
