[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = "Events CRUD service"
authors = ["Dmitry Sergeev <dmitry.sergeev@nordclan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
