[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = "Events CRUD service"
authors = ["Dmitry Sergeev <dmitry.sergeev@nordclan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"
aioredis = "^2.0.1"
redis = "^5.2.0"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
celery = "^5.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
tenacity = "^9.0.0"
httpx = "^0.27.2"
aiohttp = "^3.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
